--- a/android/pom.xml
+++ b/android/pom.xml
@@ -19,184 +19,149 @@
     </repositories>
   <dependencies>
     <dependency>
-      <groupId>androidx.databinding</groupId>
-      <artifactId>viewbinding</artifactId>
-      <version>4.2.2</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>androidx.databinding</groupId>
-      <artifactId>databinding-common</artifactId>
-      <version>4.2.2</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>androidx.databinding</groupId>
-      <artifactId>databinding-runtime</artifactId>
-      <version>4.2.2</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>androidx.databinding</groupId>
-      <artifactId>databinding-adapters</artifactId>
-      <version>4.2.2</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-parcelize-runtime</artifactId>
-      <version>1.7.10</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
       <groupId>com.android.support.constraint</groupId>
       <artifactId>constraint-layout</artifactId>
       <version>2.0.4</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>androidx.core</groupId>
       <artifactId>core-ktx</artifactId>
       <version>1.6.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>androidx.appcompat</groupId>
       <artifactId>appcompat</artifactId>
       <version>1.3.1</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.google.android.material</groupId>
       <artifactId>material</artifactId>
       <version>1.4.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>androidx.constraintlayout</groupId>
       <artifactId>constraintlayout</artifactId>
       <version>2.1.2</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>androidx.navigation</groupId>
       <artifactId>navigation-ui-ktx</artifactId>
       <version>2.5.3</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>com.scsdigital</groupId>
+      <groupId>CreditoSegundosSDK.sdk</groupId>
       <artifactId>scssdk</artifactId>
-      <version>1.1.0</version>
-      <scope>compile</scope>
+      <version>unspecified</version>
     </dependency>
     <dependency>
       <groupId>androidx.test.ext</groupId>
       <artifactId>junit-ktx</artifactId>
       <version>1.1.5</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>androidx.test</groupId>
       <artifactId>runner</artifactId>
       <version>1.5.2</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>androidx.navigation</groupId>
       <artifactId>navigation-fragment-ktx</artifactId>
-      <version>2.3.5</version>
-      <scope>compile</scope>
+      <version>2.5.3</version>
     </dependency>
     <dependency>
       <groupId>androidx.lifecycle</groupId>
       <artifactId>lifecycle-extensions</artifactId>
       <version>2.2.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.koin</groupId>
       <artifactId>koin-android</artifactId>
       <version>2.1.1</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.koin</groupId>
       <artifactId>koin-androidx-viewmodel</artifactId>
       <version>2.1.1</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk7</artifactId>
       <version>1.4.21</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxjava</artifactId>
       <version>2.1.3</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxandroid</artifactId>
       <version>2.1.1</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>retrofit</artifactId>
       <version>2.4.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>converter-gson</artifactId>
       <version>2.4.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.1</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>adapter-rxjava2</artifactId>
       <version>2.6.1</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>logging-interceptor</artifactId>
       <version>4.9.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.github.bumptech.glide</groupId>
       <artifactId>glide</artifactId>
       <version>4.9.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.github.haroldadmin</groupId>
       <artifactId>NetworkResponseAdapter</artifactId>
       <version>4.0.0-alpha01</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>androidx.browser</groupId>
       <artifactId>browser</artifactId>
       <version>1.3.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>pl.droidsonroids.gif</groupId>
       <artifactId>android-gif-drawable</artifactId>
       <version>1.2.18</version>
-      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>androidx.databinding</groupId>
+      <artifactId>viewbinding</artifactId>
+      <version>4.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>androidx.databinding</groupId>
+      <artifactId>databinding-common</artifactId>
+      <version>4.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>androidx.databinding</groupId>
+      <artifactId>databinding-runtime</artifactId>
+      <version>4.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>androidx.databinding</groupId>
+      <artifactId>databinding-adapters</artifactId>
+      <version>4.2.2</version>
     </dependency>
   </dependencies>
 </project>
