--- a/android/pom.xml
+++ b/android/pom.xml
@@ -26,12 +26,12 @@
     <dependency>
       <groupId>androidx.core</groupId>
       <artifactId>core-ktx</artifactId>
-      <version>1.6.0</version>
+      <version>1.10.1</version>
     </dependency>
     <dependency>
       <groupId>androidx.appcompat</groupId>
       <artifactId>appcompat</artifactId>
-      <version>1.3.1</version>
+      <version>1.6.1</version>
     </dependency>
     <dependency>
       <groupId>com.google.android.material</groupId>
@@ -41,12 +41,12 @@
     <dependency>
       <groupId>androidx.constraintlayout</groupId>
       <artifactId>constraintlayout</artifactId>
-      <version>2.1.2</version>
+      <version>2.1.4</version>
     </dependency>
     <dependency>
       <groupId>androidx.navigation</groupId>
       <artifactId>navigation-ui-ktx</artifactId>
-      <version>2.5.3</version>
+      <version>2.6.0</version>
     </dependency>
     <dependency>
       <groupId>CreditoSegundosSDK.sdk</groupId>
@@ -75,8 +75,8 @@
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jdk7</artifactId>
-      <version>1.4.21</version>
+      <artifactId>kotlin-stdlib-jdk8</artifactId>
+      <version>1.8.21</version>
     </dependency>
     <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
@@ -106,7 +106,7 @@
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>adapter-rxjava2</artifactId>
-      <version>2.6.1</version>
+      <version>2.8.2</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
@@ -126,7 +126,7 @@
     <dependency>
       <groupId>androidx.browser</groupId>
       <artifactId>browser</artifactId>
-      <version>1.3.0</version>
+      <version>1.5.0</version>
     </dependency>
     <dependency>
       <groupId>pl.droidsonroids.gif</groupId>
@@ -136,22 +136,27 @@
     <dependency>
       <groupId>androidx.databinding</groupId>
       <artifactId>viewbinding</artifactId>
-      <version>4.2.2</version>
+      <version>7.4.2</version>
     </dependency>
     <dependency>
       <groupId>androidx.databinding</groupId>
       <artifactId>databinding-common</artifactId>
-      <version>4.2.2</version>
+      <version>7.4.2</version>
     </dependency>
     <dependency>
       <groupId>androidx.databinding</groupId>
       <artifactId>databinding-runtime</artifactId>
-      <version>4.2.2</version>
+      <version>7.4.2</version>
     </dependency>
     <dependency>
       <groupId>androidx.databinding</groupId>
       <artifactId>databinding-adapters</artifactId>
-      <version>4.2.2</version>
+      <version>7.4.2</version>
+    </dependency>
+    <dependency>
+      <groupId>androidx.databinding</groupId>
+      <artifactId>databinding-ktx</artifactId>
+      <version>7.4.2</version>
     </dependency>
   </dependencies>
 </project>
